--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 springdoc.api-docs.path=/api-docs
 server.servlet.contextPath=/
 server.port=3000
-spring.jackson.date-format=io.swagger.RFC3339DateFormat
+spring.jackson.date-format=io.rentalapp.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
