Implement GetPricingDetails operation

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,13 @@
 hs_err_pid*
 replay_pid*
 /target/
+/.idea/.gitignore
+/.idea/aws.xml
+/.idea/codeStyles/codeStyleConfig.xml
+/.idea/compiler.xml
+/.idea/encodings.xml
+/.idea/jarRepositories.xml
+/.idea/material_theme_project_new.xml
+/.idea/misc.xml
+/.idea/codeStyles/Project.xml
+/.idea/vcs.xml
